--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <title>Résumé</title>
@@ -127,7 +127,6 @@
                                             <ul>
                                                 <li>Sexy (mini album)</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2008</em></p>
@@ -136,7 +135,6 @@
                                                 <li>The Best</li>
                                                 <li>Doremi doredo</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2007</em></p>
@@ -144,7 +142,6 @@
                                             <ul>
                                                 <li>Dancing Europe</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2006</em></p>
@@ -154,7 +151,6 @@
                                                     differed in the color of the cover and the country of the publisher)
                                                 </li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2004</em></p>
@@ -162,7 +158,6 @@
                                             <ul>
                                                 <li>I wanted a groom. Unpublished</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2003</em></p>
@@ -171,7 +166,6 @@
                                                 <li>Chita Drita</li>
                                                 <li>Ha-ra-sho!</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2002</em></p>
@@ -179,7 +173,6 @@
                                             <ul>
                                                 <li>Unpublished</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2001</em></p>
@@ -187,7 +180,6 @@
                                             <ul>
                                                 <li>Pie</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>1998</em></p>
@@ -195,7 +187,6 @@
                                             <ul>
                                                 <li>I was born to love</li>
                                             </ul>
-                                            </p>
                                         </li>
                                     </ul>
                                 </div>
@@ -212,7 +203,6 @@
                                             <ul>
                                                 <li>Make it rain champagne</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2015</em></p>
@@ -220,7 +210,6 @@
                                             <ul>
                                                 <li>Hydropark (Scarlet Lipstick)</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2012</em></p>
@@ -228,7 +217,6 @@
                                             <ul>
                                                 <li>Switter</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2011</em></p>
@@ -236,7 +224,6 @@
                                             <ul>
                                                 <li>Dolce Gabbana</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2008</em></p>
@@ -244,7 +231,6 @@
                                             <ul>
                                                 <li>Doremi</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2007</em></p>
@@ -253,7 +239,6 @@
                                                 <li>Evro Vision Queen</li>
                                                 <li>Dancing Lasha Tumbai</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2005</em></p>
@@ -262,7 +247,6 @@
                                                 <li>Tralee-wali</li>
                                                 <li>Knock-knock-knock</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2004</em></p>
@@ -271,7 +255,6 @@
                                                 <li>The groom wanted (duet with Glucose)</li>
                                                 <li>Northern girls (from the musical "The Snow Queen")</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2003</em></p>
@@ -286,7 +269,6 @@
                                                 <li>Fir-trees</li>
                                                 <li>I did not understand</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2002</em></p>
@@ -297,7 +279,6 @@
                                                 <li>Gorilka</li>
                                                 <li>Patty</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2001</em></p>
@@ -305,7 +286,6 @@
                                             <ul>
                                                 <li>Gop-Gop-Gop</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>1999</em></p>
@@ -314,7 +294,6 @@
                                                 <li>I was born to love</li>
                                                 <li>New Year</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>1997</em></p>
@@ -322,7 +301,6 @@
                                             <ul>
                                                 <li>Just Vera</li>
                                             </ul>
-                                            </p>
                                         </li>
                                     </ul>
                                 </div>
@@ -334,7 +312,7 @@
                                 <div>
                                     <ul class="timeline">
                                         <li>
-                                            <p>2008</em></p>
+                                            <p><em>2008</em></p>
                                             <p>
                                             <ul>
                                                 <li>Essen (Tim-Tim Taram) (directed by Viktor Skuratovsky)</li>
@@ -342,25 +320,22 @@
                                                 </li>
                                                 <li>Doremi (directed by Alan Badoev)</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
-                                            <p>2007</p>
+                                            <p><em>2007</em></p>
                                             <p>
                                             <ul>
                                                 <li>Kiss Please (directed by Alan Badoev)</li>
                                                 <li>Dancing Lasha Tumbai (directed by Semyon Gorov)</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
-                                            <p>2006</p>
+                                            <p><em>2006</em></p>
                                             <p>
                                             <ul>
                                                 <li>And I am laughing (directed by Semyon Gorov)</li>
                                                 <li>Take everything (that I have) (directed by Alexander Igudin)</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2005</em></p>
@@ -370,7 +345,6 @@
                                                 <li>Tralli-valli (directed by Alexander Filatovich)</li>
                                                 <li>I fell for love (directed by Semyon Gorov)</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2004</em></p>
@@ -378,7 +352,6 @@
                                             <ul>
                                                 <li>Knock-knock-knock (directed by Semyon Gorov)</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2003</em></p>
@@ -389,7 +362,6 @@
                                                 <li>Chita-drita (directed by Semyon Gorov)</li>
                                                 <li>Everything will be fine" (directed by Maxim Papernik)</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>2001</em></p>
@@ -399,7 +371,6 @@
                                                 <li>Gop-gop (directed by Maxim Papernik)</li>
                                                 <li>Pie (directed by Vladimir Yakimenko)</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>1999</em></p>
@@ -407,7 +378,6 @@
                                             <ul>
                                                 <li>Controller</li>
                                             </ul>
-                                            </p>
                                         </li>
                                         <li>
                                             <p><em>1998</em></p>
@@ -415,7 +385,6 @@
                                             <ul>
                                                 <li>A Little Bit" (directed by Vyacheslav Feofilaktov)</li>
                                             </ul>
-                                            </p>
                                         </li>
                                     </ul>
                                 </div>
@@ -430,7 +399,6 @@
                                 <ul>
                                     <li>Servant of the People 2 - cameo</li>
                                 </ul>
-                                </p>
                             </li>
                             <li>
                                 <p><em>2015</em></p>
@@ -438,7 +406,6 @@
                                 <ul>
                                     <li>Spy - cameo</li>
                                 </ul>
-                                </p>
                             </li>
                             <li>
                                 <p><em>2013</em></p>
@@ -446,7 +413,6 @@
                                 <ul>
                                     <li>Three heroes - Baba Yaga</li>
                                 </ul>
-                                </p>
                             </li>
                             <li>
                                 <p><em>2012</em></p>
@@ -454,7 +420,6 @@
                                 <ul>
                                     <li>Little Red Riding Hood - Little Red Riding Hood</li>
                                 </ul>
-                                </p>
                             </li>
                             <li>
                                 <p><em>2011</em></p>
@@ -462,7 +427,6 @@
                                 <ul>
                                     <li>The New Adventures of Aladdin - Jinsha</li>
                                 </ul>
-                                </p>
                             </li>
                             <li>
                                 <p><em>2010</em></p>
@@ -470,7 +434,6 @@
                                 <ul>
                                     <li>Morozko - stepmother</li>
                                 </ul>
-                                </p>
                             </li>
                             <li>
                                 <p><em>2007</em></p>
@@ -480,7 +443,6 @@
                                         Skomorovsky) - a ghost
                                     </li>
                                 </ul>
-                                </p>
                             </li>
                             <li>
                                 <p><em>2006</em></p>
@@ -489,7 +451,6 @@
                                     <li>The Adventures of Verka Serduchka - cameo</li>
                                     <li>First ambulance - cameo</li>
                                 </ul>
-                                </p>
                             </li>
                             <li>
                                 <p><em>2004</em></p>
@@ -498,7 +459,6 @@
                                     <li>Three Musketeers - Madame Richelieu</li>
                                     <li>Sorochinskaya fair - Khivrya</li>
                                 </ul>
-                                </p>
                             </li>
                             <li>
                                 <p><em>2003</em></p>
@@ -507,7 +467,6 @@
                                     <li>Chasing two hares - Svetlana Markovna</li>
                                     <li>The Snow Queen - Xenia, shaman</li>
                                 </ul>
-                                </p>
                             </li>
                             <li>
                                 <p><em>2002</em></p>
@@ -515,7 +474,6 @@
                                 <ul>
                                     <li>Cinderella - Brunhilde</li>
                                 </ul>
-                                </p>
                             </li>
                             <li>
                                 <p><em>2001</em></p>
@@ -523,7 +481,6 @@
                                 <ul>
                                     <li>Evenings on a farm near Dikanka - village moonshiner</li>
                                 </ul>
-                                </p>
                             </li>
                         </ul>
 
@@ -593,7 +550,6 @@
                             <ul>
                                 <li><em>'No vocals without a glass' (2009)</em></li>
                             </ul>
-                            </p>
                         </section>
                     </div>
                 </div>
